--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -5,7 +5,7 @@
             <input type="radio" class="advantages__input" name="tabs" id="tab-one" checked="checked">
             <label for="tab-one" class="advantages__label advantages__label_one">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="/images/sprite.svg#icon-security">
+                    <use xlink:href="./images/sprite.svg#icon-security">
                 </svg>
                 Гарантии - 12 месяцев
             </label>
@@ -22,7 +22,7 @@
             <input type="radio" class="advantages__input" name="tabs" id="tab-two">
             <label for="tab-two" class="advantages__label advantages__label_two">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="/images/sprite.svg#icon-pay">
+                    <use xlink:href="./images/sprite.svg#icon-pay">
                 </svg>
                 Предоплата - 25%
             </label>
@@ -39,7 +39,7 @@
             <input type="radio" class="advantages__input" name="tabs" id="tab-three">
             <label for="tab-three" class="advantages__label advantages__label_three">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="/images/sprite.svg#icon-design">
+                    <use xlink:href="./images/sprite.svg#icon-design">
                 </svg>
                 Индивидуальный дизайн
             </label>
@@ -56,7 +56,7 @@
             <input type="radio" class="advantages__input" name="tabs" id="tab-four">
             <label for="tab-four" class="advantages__label advantages__label_four">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="/images/sprite.svg#icon-traning">
+                    <use xlink:href="./images/sprite.svg#icon-traning">
                 </svg>
                 Обучение работе сайта
             </label>
@@ -73,7 +73,7 @@
             <input type="radio" class="advantages__input" name="tabs" id="tab-five">
             <label for="tab-five" class="advantages__label advantages__label_five">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="/images/sprite.svg#icon-sertificate">
+                    <use xlink:href="./images/sprite.svg#icon-sertificate">
                 </svg>
                 Сертифицированные сотрудники в системе
             </label>
