--- a/src/partials/cases.html
+++ b/src/partials/cases.html
@@ -9,7 +9,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="cases__block-img">
-                            <img src="/images/case-1.webp" alt="Кейс Белпромстандарт">
+                            <img src="./images/case-1.webp" alt="Кейс Белпромстандарт">
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
@@ -20,7 +20,7 @@
                             </div>
                             <div class="cases__content is-open" data-tab-content="1">
                                 <div class="cases__img"></div>
-                                <ul class="cases__list">
+                                <ul class="cases__list cases__list_1">
                                     <li class="cases__item">
                                         <svg class="cases__pic" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
                                             <use xlink:href="/images/sprite.svg#user">
@@ -230,7 +230,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="cases__block-img">
-                            <img src="/images/case-1.webp" alt="Кейс Белпромстандарт">
+                            <img src="./images/case-1.webp" alt="Кейс Белпромстандарт">
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
@@ -241,7 +241,7 @@
                             </div>
                             <div class="cases__content is-open" data-tab-content="1">
                                 <div class="cases__img"></div>
-                                <ul class="cases__list">
+                                <ul class="cases__list cases__list_1">
                                     <li class="cases__item">
                                         <svg class="cases__pic" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
                                             <use xlink:href="/images/sprite.svg#user">
@@ -451,7 +451,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="cases__block-img">
-                            <img src="/images/case-1.webp" alt="Кейс Белпромстандарт">
+                            <img src="./images/case-1.webp" alt="Кейс Белпромстандарт">
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
@@ -462,7 +462,7 @@
                             </div>
                             <div class="cases__content is-open" data-tab-content="1">
                                 <div class="cases__img"></div>
-                                <ul class="cases__list">
+                                <ul class="cases__list cases__list_1">
                                     <li class="cases__item">
                                         <svg class="cases__pic" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
                                             <use xlink:href="/images/sprite.svg#user">
