--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -29,28 +29,28 @@
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-skype">
+                            <use xlink:href="./images/sprite.svg#icon-skype">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-whatsapp">
+                            <use xlink:href="./images/sprite.svg#icon-whatsapp">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-viber">
+                            <use xlink:href="./images/sprite.svg#icon-viber">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-tme">
+                            <use xlink:href="./images/sprite.svg#icon-tme">
                         </svg>
                     </a>
                 </li>
@@ -60,35 +60,35 @@
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-vk">
+                            <use xlink:href="./images/sprite.svg#icon-vk">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-ok">
+                            <use xlink:href="./images/sprite.svg#icon-ok">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-fb">
+                            <use xlink:href="./images/sprite.svg#icon-fb">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-instagram">
+                            <use xlink:href="./images/sprite.svg#icon-instagram">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#icon-youtube">
+                            <use xlink:href="./images/sprite.svg#icon-youtube">
                         </svg>
                     </a>
                 </li>
@@ -104,56 +104,56 @@
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_1">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-mastercard-securecode">
+                            <use xlink:href="./images/sprite.svg#pay-mastercard-securecode">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_2">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-visa">
+                            <use xlink:href="./images/sprite.svg#pay-visa">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_3">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-verified-visa">
+                            <use xlink:href="./images/sprite.svg#pay-verified-visa">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_4">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-belkart-2">
+                            <use xlink:href="./images/sprite.svg#pay-belkart-2">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_5">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-belkart">
+                            <use xlink:href="./images/sprite.svg#pay-belkart">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_6">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-mastercard">
+                            <use xlink:href="./images/sprite.svg#pay-mastercard">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_7">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-webpay">
+                            <use xlink:href="./images/sprite.svg#pay-webpay">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
                     <a href="#" class="footer__link footer__link-pay footer__link-pay_8">
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="/images/sprite.svg#pay-erip">
+                            <use xlink:href="./images/sprite.svg#pay-erip">
                         </svg>
                     </a>
                 </li>
