--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,9 +4,6 @@
         <div class="header__top">
             <div class="header__menu burger">
                 <button class="burger__btn">
-                    <!-- <svg class="burger__img" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <use xlink:href="/images/sprite.svg#icon-burger">
-                    </svg> -->
                 </button>
                 <nav class="burger__nav">
                     <ul class="burger__list">
@@ -16,6 +13,19 @@
                         <li class="burger__item header__item header__item-trigger">
                             <a class="burger__link header__link" href="#">Продвижение сайтов (SEO)</a>
                             <ul class="header__dropdown-menu">
+                                <li class="burger__title-menu">
+                                    <button class="burger__btn-back">
+                                        <svg class="header__link-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                                            <use xlink:href="./images/sprite.svg#btn-back">
+                                        </svg>
+                                    </button>
+                                    <button class="burger__btn-close">
+                                        <svg class="header__link-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                                            <use xlink:href="./images/sprite.svg#btn-close">
+                                        </svg>
+                                    </button>
+                                    Продвижение сайтов (SEO)
+                                </li>
                                 <li class="header__drop-item"><a class="header__link"
                                         href="/prodvizhenie-sajtov/prodvizhenie-po-pozicijam">Продвижение по
                                         позициям</a></li>
@@ -36,6 +46,19 @@
                         <li class="burger__item header__item header__item-trigger">
                             <a class="burger__link header__link" href="#">Контексная реклама</a>
                             <ul class="header__dropdown-menu">
+                                <li class="burger__title-menu">
+                                    <button class="burger__btn-back">
+                                        <svg class="header__link-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                                            <use xlink:href="./images/sprite.svg#btn-back">
+                                        </svg>
+                                    </button>
+                                    <button class="burger__btn-close">
+                                        <svg class="header__link-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                                            <use xlink:href="./images/sprite.svg#btn-close">
+                                        </svg>
+                                    </button>
+                                    Контексная реклама
+                                </li>
                                 <li class="header__drop-item"><a class="header__link"
                                         href="/kontekstnaja-reklama/kontekstnaja-reklama-oplata-za-lidy">Контекстная
                                         реклама
@@ -71,31 +94,31 @@
             <div class="header__block-logo">
                 <a class="header__logo-link" href="index.html">
                     <picture>
-                        <source media="(max-width: 450px)" srcset="/images/svg/logo-phone.svg">
-                        <source media="(max-width: 1579px)" srcset="/images/svg/logo-tablet.svg">
-                        <source media="(min-width: 1580px)" srcset="/images/svg/logo-desktop.svg">
-                        <img class="header__logo" src="/images/svg/logo-desktop.svg"
+                        <source media="(max-width: 450px)" srcset="./images/svg/logo-phone.svg">
+                        <source media="(max-width: 1579px)" srcset="./images/svg/logo-tablet.svg">
+                        <source media="(min-width: 1580px)" srcset="./images/svg/logo-desktop.svg">
+                        <img class="header__logo" src="./images/svg/logo-desktop.svg"
                             alt="Логотип агенства рекламы и веб-разработки ВТОП3">
                     </picture>
                 </a>
             </div>
             <div class="header__block-callback">
-                <a class="header__phone header__link" href="tel:++375292577007">
+                <a class="header__phone header__link" href="tel:+375292577007">
                     <svg class="header__link-img" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <use xlink:href="/images/sprite.svg#phone-icon">
+                        <use xlink:href="./images/sprite.svg#phone-icon">
                     </svg>
                     +375 (29) 257-70-07
                 </a>
                 <a class="header__mail header__link" href="mailto:3577007by@gmail.com">
                     <svg class="header__link-img" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <use xlink:href="/images/sprite.svg#mail-icon">
+                        <use xlink:href="./images/sprite.svg#mail-icon">
                     </svg>
                     3577007by@gmail.com
                 </a>
                 <div class="header__lang">
                     <span class="header__lang-name">RU</span>
                     <svg class="header__lang-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
-                        <use xlink:href="/images/sprite.svg#ru-flag">
+                        <use xlink:href="./images/sprite.svg#ru-flag">
                     </svg>
                 </div>
             </div>
