--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,46 @@
 <section class="hero">
     <div class="hero__container container">
-        <div class="hero__block">
-            <h2 class="hero__title">КОНТЕКСТНАЯ РЕКЛАМА</h2>
-            <h3 class="hero__subtitle">Бонус 300 ₽ на рекламный кабинет Яндекса и 300 $ на Google!*</h3>
-            <h3 class="hero__subtitle hero__subtitle_last">*для новых клиентов</h3>
-            <button class="hero__btn btn">Заказать рекламу</button>
-            <ul class="hero__list">
-                <li class="hero__item">Сертифицированные специалисты</li>
-                <li class="hero__item">Быстро настраиваем — до 10 дней</li>
-                <li class="hero__item">Настройка от 200 ₽, ведение от 180 ₽</li>
-            </ul>
-        </div>
-        <div class="hero__picture">
-            <div class="hero__name">
-                <p class="hero__person">Михаил Сунцов</p>
-                <p class="hero__person hero__person_post">Директор</p>
+        <div class="hero__swiper swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="hero__block">
+                        <h2 class="hero__title">КОНТЕКСТНАЯ РЕКЛАМА</h2>
+                        <h3 class="hero__subtitle">Бонус 300 ₽ на рекламный кабинет Яндекса и 300 $ на Google!*</h3>
+                        <h3 class="hero__subtitle hero__subtitle_last">*для новых клиентов</h3>
+                        <button class="hero__btn btn">Заказать рекламу</button>
+                        <ul class="hero__list">
+                            <li class="hero__item">Сертифицированные специалисты</li>
+                            <li class="hero__item">Быстро настраиваем — до 10 дней</li>
+                            <li class="hero__item">Настройка от 200 ₽, ведение от 180 ₽</li>
+                        </ul>
+                    </div>
+                    <div class="hero__picture">
+                        <div class="hero__name">
+                            <p class="hero__person">Михаил Сунцов</p>
+                            <p class="hero__person hero__person_post">Директор</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="hero__block">
+                        <h2 class="hero__title">РАЗРАБОТКА 
+                            ИНТЕРНЕТ-САЙТОВ</h2>
+                        <h3 class="hero__subtitle">Бонус 300 ₽ на рекламный кабинет Яндекса и 300 $ на Google!*</h3>
+                        <h3 class="hero__subtitle hero__subtitle_last">*для новых клиентов</h3>
+                        <button class="hero__btn btn">Заказать рекламу</button>
+                        <ul class="hero__list">
+                            <li class="hero__item">Сертифицированные специалисты</li>
+                            <li class="hero__item">Быстро настраиваем — до 10 дней</li>
+                            <li class="hero__item">Настройка от 200 ₽, ведение от 180 ₽</li>
+                        </ul>
+                    </div>
+                    <div class="hero__picture">
+                        <div class="hero__name">
+                            <p class="hero__person">Михаил Сунцов</p>
+                            <p class="hero__person hero__person_post">Директор</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
