--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -2,8 +2,8 @@
     <div class="partners__container container">
         <h2 class="partners__title title">МЫ ЯВЛЯЕМСЯ <br><span>СЕРТИФИЦИРОВАННЫМИ ПАРТНЕРАМИ</span></h2>
         <div class="partners__block">
-            <img class="partners__img" src="/images/svg/partner-1.svg" alt="Google партнер">
-            <img class="partners__img" src="/images/svg/partner-2.svg" alt="Партнер PRO">
+            <img class="partners__img" src="./images/svg/partner-1.svg" alt="Google партнер">
+            <img class="partners__img" src="./images/svg/partner-2.svg" alt="Партнер PRO">
         </div>
     </div>
 </section>
