--- a/src/partials/prices.html
+++ b/src/partials/prices.html
@@ -10,7 +10,7 @@
                     <tr class="prices__tr" class="prices__tr">
                         <th class="prices__th">Тариф</th>
                         <th class="prices__th">Премиум</th>
-                        <th class="prices__th">Оптимальный</th>
+                        <th class="prices__th prices__line_th">Оптимальный</th>
                         <th class="prices__th">Старт</th>
                     </tr>
                 </thead>
@@ -22,7 +22,7 @@
                         <td class="prices__td">
                             <button class="prices__btn btn">Выбрать пакет</button>
                         </td>
-                        <td class="prices__td">
+                        <td class="prices__td prices__line">
                             <button class="prices__btn btn">Выбрать пакет</button>
                         </td>
                         <td class="prices__td">
@@ -34,243 +34,179 @@
                     <tr class="prices__tr">
                         <td class="prices__td">Бюджет в месяц</td>
                         <td class="prices__td">от 100 000 ₽</td>
-                        <td class="prices__td">от 60 000 ₽</td>
+                        <td class="prices__td prices__line">от 60 000 ₽</td>
                         <td class="prices__td">от 30 000 ₽</td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">1 месяц — подготовка и запуск рекламы</td>
                         <td class="prices__td">70 000 ₽</td>
-                        <td class="prices__td">50 000 ₽</td>
+                        <td class="prices__td prices__line">50 000 ₽</td>
                         <td class="prices__td">40 000 ₽</td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Со 2 месяца сопровождение рекламы</td>
                         <td class="prices__td">25 000 ₽ / мес</td>
-                        <td class="prices__td">20 000 ₽ / мес</td>
+                        <td class="prices__td prices__line">20 000 ₽ / мес</td>
                         <td class="prices__td">15 000 ₽ / мес</td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Количество запросов</td>
                         <td class="prices__td">без ограничения</td>
-                        <td class="prices__td">до 2 000</td>
+                        <td class="prices__td prices__line">до 2 000</td>
                         <td class="prices__td">до 500</td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Количество направлений</td>
                         <td class="prices__td">без ограничения</td>
-                        <td class="prices__td">до 5</td>
+                        <td class="prices__td prices__line">до 5</td>
                         <td class="prices__td">до 2</td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Аналитика/цели</td>
                         <td class="prices__td">
-                            <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
+                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
+                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                            <!-- <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
                                 xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#ya-metrica">
+                                <use xlink:href="./images/sprite.svg#ya-metrica">
                             </svg>
                             <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
                                 xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#google-analytica">
-                            </svg>
+                                <use xlink:href="./images/sprite.svg#google-analytica">
+                            </svg> -->
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
+                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#ya-metrica">
-                            </svg>
-                            <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#google-analytica">
-                            </svg>
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#ya-metrica">
-                            </svg>
-                            <svg class="prices__pic prices__pic_logo" viewBox="0 0 120 30"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#google-analytica">
-                            </svg>
+                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
+                            <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Еженедельные отчёты</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Поисковая реклама</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Рекламная сеть Яндекс</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Ретаргетинг</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
 
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
-
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Баннер на поиске</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
 
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
-
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Коллтрекинг</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
 
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
-
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Динамические объявления</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
-
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Смарт-баннеры</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
-
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Товарная РК</td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#plus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+
+                        </td>
+                        <td class="prices__td prices__line">
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                         <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
-
-                        </td>
-                        <td class="prices__td">
-                            <svg class="prices__pic" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                                <use xlink:href="/images/sprite.svg#minus">
-                            </svg>
+                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
 
                         </td>
                     </tr>
