--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -21,7 +21,7 @@
                         противоречить предыдущим правкам и согласованным решениям на предыдущих этапах согласования
                         (референсы, эскиз).</div>
                     <div class="reviews__video">
-                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                        <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -37,7 +37,7 @@
                         противоречить предыдущим правкам и согласованным решениям на предыдущих этапах согласования
                         (референсы, эскиз).</div>
                     <div class="reviews__video">
-                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                        <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -53,7 +53,7 @@
                         противоречить предыдущим правкам и согласованным решениям на предыдущих этапах согласования
                         (референсы, эскиз).</div>
                     <div class="reviews__video">
-                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                        <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -69,7 +69,7 @@
                         противоречить предыдущим правкам и согласованным решениям на предыдущих этапах согласования
                         (референсы, эскиз).</div>
                     <div class="reviews__video">
-                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                        <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -85,7 +85,7 @@
                         противоречить предыдущим правкам и согласованным решениям на предыдущих этапах согласования
                         (референсы, эскиз).</div>
                     <div class="reviews__video">
-                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                        <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     противоречить предыдущим правкам и согласованным решениям на предыдущих этапах согласования
                     (референсы, эскиз).</div>
                 <div class="reviews__video">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                    <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </li>
             <li class="reviews__item">
@@ -120,7 +120,7 @@
                     предыдущим правкам и согласованным решениям на предыдущих этапах согласования (референсы, эскиз).
                 </div>
                 <div class="reviews__video">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                    <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </li>
             <li class="reviews__item">
@@ -136,7 +136,7 @@
                     предыдущим правкам и согласованным решениям на предыдущих этапах согласования (референсы, эскиз).
                 </div>
                 <div class="reviews__video">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                    <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </li>
             <li class="reviews__item">
@@ -152,7 +152,7 @@
                     предыдущим правкам и согласованным решениям на предыдущих этапах согласования (референсы, эскиз).
                 </div>
                 <div class="reviews__video">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                    <iframe width="420" height="260" src="https://www.youtube.com/embed/FBkdMh4hxqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </li>
         </ul>
