--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -5,7 +5,7 @@
             <li class="team__item">
                 <div class="team__person">
                     <h3 class="team__name">Дмитрий</h3>
-                    <img class="team__img" src="/images/person-desktop-1.webp"
+                    <img class="team__img" src="./images/person-desktop-1.webp"
                         alt="Дмитрий Технический директор (CTO)" />
                 </div>
                 <div class="team__post">
@@ -15,22 +15,22 @@
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                         </ul>
@@ -40,7 +40,7 @@
             <li class="team__item">
                 <div class="team__person">
                     <h3 class="team__name">Екатерина</h3>
-                    <img class="team__img" src="/images/person-desktop-2.webp" alt="Екатерина SEO специалист" />
+                    <img class="team__img" src="./images/person-desktop-2.webp" alt="Екатерина SEO специалист" />
                 </div>
                 <div class="team__post">
                     <h3 class="team__post-title">SEO специалист</h3>
@@ -49,22 +49,22 @@
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                         </ul>
@@ -74,7 +74,7 @@
             <li class="team__item">
                 <div class="team__person">
                     <h3 class="team__name">Марина</h3>
-                    <img class="team__img" src="/images/person-desktop-3.webp" alt="Марина SEO специалист" />
+                    <img class="team__img" src="./images/person-desktop-3.webp" alt="Марина SEO специалист" />
                 </div>
                 <div class="team__post">
                     <h3 class="team__post-title">SEO специалист</h3>
@@ -83,22 +83,22 @@
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-1.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-2.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-3.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                             <li class="team__item-sert">
                                 <a href="#" target="_blank" class="team__link">
-                                    <img src="/images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
+                                    <img src="./images/svg/sertificate-4.svg" alt="Сертификат" class="team__img-sert" />
                                 </a>
                             </li>
                         </ul>
