--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -108,6 +108,7 @@ img {
     padding: 18px;
     left: -18px;
     background-color: $color-4D3F75;
+    z-index: 100;
 
     &:hover {
       display: block;
@@ -155,13 +156,54 @@ img {
   &__item-trigger:hover>.header__dropdown-menu {
     display: block;
   }
+  &__item-trigger:hover>.header__dropdown-menu-flex {
+    display: flex;
+  }
 
   &__dropdown-menu-include-last {
     display: none;
     position: absolute;
     left: 0;
+    z-index: 100;
   }
-
+  .burger__title-menu {
+    display: flex;
+    align-items: center;
+    background-color: #665a87;
+    padding: 8px 12px;
+    border-radius: 10px;
+    display: none;
+  }
+  .burger__btn-back {
+    @include btnReset;
+    width: 30px;
+    height: 30px;
+    svg {
+      width: 100%;
+    }
+    &:hover {
+      filter: brightness(0.8)
+    }
+  }
+  .burger__btn-close {
+    @include btnReset;
+    width: 30px;
+    height: 30px;
+    margin-right: 14px;
+    svg {
+      width: 100%;
+    }
+    &:hover {
+      filter: brightness(0.8)
+    }
+  }
+  &__dropdown-menu-flex {
+    .header__link:hover > .header__dropdowm-menu-include-last {
+      display: block;
+      position: absolute;
+      left: 100%;
+    }
+  } 
   &__link {
     @include linkReset;
     color: $color-FFFFFF;
@@ -255,11 +297,12 @@ img {
       width: max-content;
       position: absolute;
       border-radius: 0 0 20px 20px;
-      top: 56px;
+      top: 60px;
       padding: 30px 22px;
       left: 35px;
       background-color: $color-4D3F75;
       transition: all 0.2s ease-in-out;
+      z-index: 100;
     }
 
     &__item {
@@ -280,6 +323,12 @@ img {
 
   &__container {
     display: flex;
+  }
+  &__swiper {
+    width: 100%;
+    .swiper-slide {
+      display: flex;
+    }
   }
 
   &__title {
@@ -331,7 +380,7 @@ img {
     padding: 20px 20px 20px 64px;
     font-size: 14px;
     font-weight: 700;
-    background-image: url("/images/svg/sprite/icon-done.svg");
+    background-image: url("./images/svg/sprite/icon-done.svg");
     background-repeat: no-repeat;
     background-position: 20px center;
 
@@ -433,9 +482,25 @@ img {
     border-right: 30px solid $color-F3F3F3;
   }
 
-  &__tr>td:not(:first-child) {
+  &__tr>td:nth-child(2) {
     text-align: center;
-    border-right: 21px solid $color-F3F3F3;
+    border-right: 3px solid $color-F3BC28;
+
+  }
+  &__tr>td:nth-child(4) {
+    text-align: center;
+  }
+  &__tr>td:nth-child(3) {
+      text-align: center;
+    border-right: 3px solid $color-F3BC28;
+  }
+  &__thead>tr >th:nth-child(2) {
+    border-right: 3px solid $color-F3BC28;
+
+  }
+  &__thead>tr >th:nth-child(3) {
+    border-right: 3px solid $color-F3BC28;
+    border-top: 3px solid $color-F3BC28;
   }
 
   &__tr:first-child>td:not(:first-child) {
@@ -465,11 +530,31 @@ img {
     }
   }
 
+  &__tr:last-child>td:nth-child(3) {
+    border-bottom: 3px solid $color-F3BC28;
+  }
   &__tfoot .prices__tr:last-child td {
     border: none;
     padding: 0;
     padding-top: 25px;
   }
+
+//   &__tr:nth-child(2n) > td:nth-child(3) {
+//     background-color: red;
+// }
+//   .prices__line {
+//     position: relative;
+//     background: green;
+//     border: 3px solid red;
+
+    
+//     // border: 1px solid #665a87;
+//   }
+//   &__line_th {
+//     background-color: red;
+//   }
+
+
 }
 
 .cases {
@@ -579,7 +664,7 @@ img {
   &__btn {
     @include btnReset;
     @include linkReset;
-    min-width: 30%;
+    min-width: 31.8%;
     font-size: 18px;
     font-weight: 400;
     color: $color-9A9A9A;
@@ -1036,11 +1121,17 @@ img {
   }
 
   &__video {
-    min-height: 260px;
-    background-color: #d9d9d9;
-    background-image: url("/images/svg/sprite/media-icon.svg");
+    display: flex;
+    justify-content: center;
+    max-height: 260px;
+    height: 260px;
+    background-color: $color-000000;
+    background-image: url("./images/svg/sprite/media-icon.svg");
     background-repeat: no-repeat;
     background-position: center center;
+    iframe {
+      max-width: 100%;
+    }
   }
 
   &__descr {
@@ -1907,4 +1998,32 @@ img {
 
 .none {
   display: none;
+}
+.flip {
+  font-size: 0;
+  a {
+    pointer-events: none;
+    color: transparent;
+    text-shadow: none;
+    user-select: none;
+  }
+}
+.header__dropdown-menu.visible {
+  transition: all 0.3s ease-in;
+  position: fixed;
+  top: 100px;
+  left: 64px;
+  .burger__title-menu {
+    font-size: 18px;
+    color: $color-F1CA2D;
+  }
+  li {
+    pointer-events: painted;
+
+  }
+  a {
+    pointer-events: painted;
+    color: $color-FFFFFF;
+
+  }
 }
