--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -246,6 +246,11 @@
     padding-left: 12px;
     padding-right: 12px;
   }
+  .burger__item {
+    .header__dropdown-menu {
+        max-width: 400px;
+    }
+  }
   .header {
     &__container {
       padding-left: 40px;
@@ -277,7 +282,7 @@
       margin-bottom: 12px;
     }
     &__block {
-      padding-bottom: 34px;
+      padding-bottom: 45px;
     }
     &__item {
       padding: 11px 7px 11px 24px;
@@ -324,6 +329,9 @@
     &__title {
       margin-bottom: 32px;
     }
+    &__img:first-child {
+        margin-right: 25px;
+    }
   }
   .offers {
     &__title {
@@ -341,6 +349,9 @@
     &__subtitle {
       font-size: 30px;
       margin-bottom: 24px;
+    }
+    &__item {
+        margin-bottom: 2px;
     }
     &__caption {
       font-size: 24px;
@@ -401,11 +412,13 @@
       margin-bottom: 0;
     }
     &__subtitle {
+      max-width: 560px;
       font-size: 32px;
       font-weight: 400;
     }
     &__block-title {
       padding: 0 10px;
+      margin-bottom: 18px;
     }
     &__btn {
       padding: 18px 22px;
@@ -472,6 +485,30 @@
   .header__mail {
     margin-right: 12px;
   }
+  .header {
+    &__item-trigger:hover>.header__dropdown-menu {
+        display: none;
+      }
+    .burger {
+        &__list {
+            width: 90%;
+        }
+        &__title-menu {
+            display: flex;
+        }
+        .header__dropdown-menu {
+            left: 50px;
+            padding: 0;
+            top: 100px;
+    
+        }
+    }
+  }
+  .burger {
+    &__item {
+        padding: 3px;
+    }
+  }
   .clients {
     &__container {
       padding-top: 30px;
@@ -480,7 +517,9 @@
   }
   .hero {
     &__container {
-      flex-direction: column-reverse;
+        .swiper-slide {
+            flex-direction: column-reverse;
+        }
     }
     &__picture {
       width: 316px;
@@ -671,15 +710,19 @@
     }
   }
 }
-@media (max-width: 430px) {
-  .header {
+    @media (max-width: 430px) {
+    .header {
     &__container {
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 14px;
+      padding-right: 14px;
       max-height: 60px;
+      border-radius: 0 0 35px 35px;
     }
     &__lang-name {
-      font-size: 14px;
+      font-size: 0;
+    }
+    &__lang-img {
+        width: 20px;
     }
     &__logo {
       margin: 0;
@@ -691,16 +734,52 @@
       margin-right: 8px;
     }
     &__top {
-      height: 60px;
+      height: 57px;
     }
     .burger {
       margin-top: 10px;
+      &__list {
+        width: 100%;
+        min-height: 100vh;
+        left: 0;
+        right: 0;
+        top: 56px;
+        border-radius: 20px;
+        overflow-y: auto;
+        transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+        &.hidden {
+            transform: translateX(-100%);
+        }
+        &.visible {
+            transform: translateX(0);
+        }
+      }
+      .header__dropdown-menu {
+        position: fixed;
+        top: 30px;
+        left: 20px;
+        right: 20px;
+        max-width: fit-content;
+        transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+        &.hidden {
+            transform: translateX(-100%);
+        }
+        &.visible {
+            transform: translateX(0);
+        }
+      }
     }
+    
     &__logo-link {
       width: 130px;
     }
   }
   .hero {
+    &__picture {
+        width: 250px;
+        height: 180px;
+        margin: 10px 0 0;
+    }
     &__list {
       width: 100%;
       flex-direction: column;
@@ -712,8 +791,46 @@
       margin-right: 0;
       padding: 16px 16px 16px 30px;
     }
+    &__block {
+        padding-top: 24px;
+        padding-bottom: 35px;
+    }
+  }
+  .partners {
+    &__title {
+        line-height: 26px;
+        margin-bottom: 10px;
+    }
+    &__container {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    &__img {
+        height: 130px;
+        width: auto;
+    }
+  }
+  .offers {
+    &__container {
+        padding-top: 30px;
+        padding-bottom: 0;
+    }
+    &__item {
+        background-size: cover;
+        background-position: center;
+    }
+    &__title {
+        margin-bottom: 14px;
+    }
+    &__item:not(:last-child) {
+        margin-bottom: 11px;
+    }
   }
   .cases {
+    &__container {
+        padding-top: 30px;
+        padding-bottom: 40px;
+    }
     &__img {
       display: none;
     }
@@ -731,6 +848,57 @@
         padding: 6px 8px;
       }
     }
+    &__subtitle {
+        font-size: 24px;
+        margin-bottom: 20px;
+        line-height: 20px;
+    }
+    &__caption {
+        text-align: center;
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+    .swiper-slide {
+        padding: 16px 6px;
+    }
+    &__tabs {
+        margin-bottom: 24px;
+    }
+    &__btn {
+        margin: 0 5px 0 0;
+    }
+    &__btns-block {
+        top: auto;
+        bottom: 40px;
+    }
+    &__cash {
+        .cases__item {
+            padding: 2px;
+        }
+    }
+    &__chart {
+        min-height: 75px;
+    }
+    &__list_1 {
+        grid-column: 1/span 3;
+        margin-bottom: 5px;
+        .cases__item {
+            padding-bottom: 6px;
+        }
+    }
+    &__list_3 {
+        .cases__pic {
+            margin-right: 0;
+        }
+        .problem__title {
+            font-size: 12px;
+            padding: 3px;
+        }
+    }
+    &__link {
+        margin-top: 6px;
+    }
+
   }
   .partners {
     &__title {
@@ -739,4 +907,157 @@
       }
     }
   }
+  .prices {
+    &__container {
+        padding-top: 30px;
+    }
+    &__table {
+        width: 560px;
+    }
+    &__subtitle {
+        font-size: 28px;
+    }
+    .prices__tr:first-child>td:not(:first-child) {
+        font-size: 10px;
+    }
+    &__block {
+        padding: 22px 8px;
+    }
+    &__btn {
+        padding: 14px;
+    }
+    &__pic_logo {
+        width: 60px;
+        height: 14px;
+    }
+    th {
+        font-size: 10px;
+        padding: 8px 2px;
+    }
+    td {
+        font-size: 8px;
+        padding: 6px 3px;
+    }
+  }
+  .reviews {
+    &__container {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    &__btns-block {
+        right: 0;
+    }
+    &__subtitle {
+        margin-bottom: 84px;
+    }
+    &__comment {
+        padding: 21px 27px;
+        margin-bottom: 10px;
+    }
+    &__video {
+        min-height: 300px;
+    }
+    &__swiper {
+        margin-bottom: 20px;
+    }
+  }
+  .advantages {
+    &__title {
+        padding: 0 5px;
+        margin-bottom: 20px;
+    }
+    &__label {
+        padding: 14px;
+    }
+    &__content {
+        padding: 20px;
+    }
+    &__subtitle {
+        font-size: 18px;
+    }
+    &__descr {
+        font-size: 12px;
+    }
+  }
+  .team {
+    &__container {
+        padding-top: 40px;
+    }
+    &__title {
+        text-align: start;
+        margin-bottom: 10px;
+    }
+    &__person {
+        height: 180px;
+    }
+    &__name {
+        font-size: 18px;
+    }
+    &__post {
+        padding: 10px 14px;
+        &-title {
+            font-size: 18px;
+        }
+    }
+    &__list {
+        grid-gap: 20px;
+    }
+    &__link {
+        width: 30px;
+        height: 30px;
+    }
+  }
+  .clients {
+    &__container {
+        padding-bottom: 30px;
+    }
+    &__sw .swiper-slide .clients__img {
+        max-height: 70px;
+    }
+  }
+
+  .clients__sw .clients__btns-block {
+    position: absolute;
+    top: 0;
+    left: -13px;
+    width: 110%;
+    height: 48px;
+}
+.questions {
+    &__title {
+        font-size: 26px;
+        text-align: start;
+        margin-bottom: 13px;
+    }
+    .accordion .ac .ac-trigger::after {
+        font-size: 34px;
+        right: 0px;
+        font-weight: 400;
+    }
+}
+.callback {
+    &__block {
+        padding: 30px 0;
+        &_1 {
+            padding-bottom: 0;
+        }
+    }
+    &__title {
+        margin-bottom: 0;
+    }
+    &__descr {
+        font-size: 0;
+    }
+    &__input {
+        padding: 2px 6px;
+        &_text {
+            border-radius: 10px;
+        }
+    }
+}
+.footer {
+    &__list-pay {
+        grid-template-columns: repeat(2, 80px);
+    }
+}
 }
